gccida/c1/get_attr_mode
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_attr_mode/src/insn-attrtab.c:17237:1: error: must use 'enum' tag to refer to type 'attr_mode'
attr_mode  get_attr_mode( rtx insn) 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_attr_mode/src/insn-attrtab.c:17240:1: error: must use 'enum' tag to refer to type 'attr_mode'
attr_mode result; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_attr_mode/src/insn-attrtab.c:17248:1: error: must use 'enum' tag to refer to type 'attr_mode'
attr_mode v11; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_attr_mode/src/insn-attrtab.c:17266:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v19 = (  struct rtx_def *)insn[2]; 
                          ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_attr_mode/src/insn-attrtab.c:17268:29: error: too many arguments provided to function-like macro invocation
fatal_insn_not_found( insn, "insn-attrtab.c", 17669, "get_attr_mode"); 
                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_attr_mode/src/toplev.h:52:9: note: macro 'fatal_insn_not_found' defined here
#define fatal_insn_not_found(insn) \
        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_attr_mode/src/insn-attrtab.c:17268:1: error: use of undeclared identifier 'fatal_insn_not_found'; did you mean '_fatal_insn_not_found'?
fatal_insn_not_found( insn, "insn-attrtab.c", 17669, "get_attr_mode"); 
^~~~~~~~~~~~~~~~~~~~
_fatal_insn_not_found
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_attr_mode/src/toplev.h:40:13: note: '_fatal_insn_not_found' declared here
extern void _fatal_insn_not_found       PARAMS ((struct rtx_def *,
            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_attr_mode/src/insn-attrtab.c:17752:69: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| ( unsigned int)( which_alternative - 2) <= 2 && aligned_operand( recog_data_0.operand[1], HImode) 
                                                                    ^~~~~~~~~~~~
                                                                    recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_attr_mode/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_attr_mode/src/insn-attrtab.c:17758:29: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| ( v16 = aligned_operand( recog_data_0.operand[1], HImode), result = MODE_SI, !v16) ) 
                            ^~~~~~~~~~~~
                            recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_attr_mode/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_attr_mode/src/insn-attrtab.c:17796:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !q_regs_operand( recog_data_0.operand[0], QImode) ) 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_attr_mode/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_attr_mode/src/insn-attrtab.c:17840:24: error: subscripted value is not an array, pointer, or vector
return *(int *)0x691CBC[which_alternative - 5]; 
               ~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_attr_mode/src/obj/insn-attrtab.o] Error 1
